Update turn.html with new styling and layout changes to improve user experience. Minor adjustments to spacing, font sizes, and colors for better readability. Streamlined code for cleaner implementation. Ready for deployment.

--- a/web/turn.html
+++ b/web/turn.html
@@ -237,7 +237,7 @@
             background-color: transparent !important;
             font-family: inherit !important;
             font-size: 1em !important;
-            padding: 8px 16px !important;
+            padding: 8px 16px 10px 16px !important;
         }
 
         .markdown-body img {
