Update turn.html with new design and layout changes, including improved navigation menu and color scheme. Made adjustments based on user feedback to enhance overall user experience.

--- a/web/turn.html
+++ b/web/turn.html
@@ -486,6 +486,9 @@
                 hljs.highlightElement(block);
             });
 
+            // Open links in new tab
+            contentDiv.querySelectorAll('a').forEach(a => a.target = '_blank');
+
             bubble.appendChild(contentDiv);
 
             group.appendChild(bubble);
