Update turn functionality in web application - Modified web/turn.html to improve user interface for turn functionality - Modified web/turn.mjs to optimize turn logic for better performance

--- a/web/turn.html
+++ b/web/turn.html
@@ -237,7 +237,7 @@
             background-color: transparent !important;
             font-family: inherit !important;
             font-size: 1em !important;
-            padding: 8px 16px 10px 16px !important;
+            padding: 16px !important;
         }
 
         .markdown-body img {
@@ -255,22 +255,13 @@
             margin-bottom: 0 !important;
         }
 
-        /* Force spacing for code blocks even if they are the first element */
-        .markdown-body>pre:first-child {
-            margin-top: 8px !important;
-        }
 
-        .markdown-body>pre:last-child {
-            margin-bottom: 8px !important;
-        }
 
         /* Code Block Fixes */
         .markdown-body pre {
             padding: 36px 16px 16px 16px !important;
             background-color: #f6f8fa !important;
             border-radius: 6px !important;
-            margin-top: 16px !important;
-            margin-bottom: 16px !important;
             position: relative !important;
         }
 
